fix: get seats
