# gen/cinema/cinema.swagger.json
@@ -40,13 +40,6 @@
             "in": "query",
             "required": false,
             "type": "string"
-          },
-          {
-            "name": "setOffset",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
           }
         ],
         "tags": [
